--- a/_output.yml
+++ b/_output.yml
@@ -5,7 +5,7 @@ bookdown::gitbook:
       before: |
         <li><a href="./">Conformal Mapping</a></li>
       after: |
-        <li><a href="https://github.com/rstudio/bookdown" target="blank">Published with bookdown</a></li>
+        <li><a href="https://github.com/rstudio/bookdown" target="blank">Ashan Jayamal</a></li>
     edit: https://github.com/USERNAME/REPO/edit/BRANCH/%s
     download: ["pdf"]
 bookdown::pdf_book:
